--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="css/blog.css" rel="stylesheet">
+  <link href="css/blog.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
   <title> Karibu Groceries LTD.</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark  ">
-
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-
       <li class="nav-item">
         <img src="./Img/logo5.jpg" style="width:80px; height:80px; border-radius: 30px; background-color: #ddd;">
       </li><br><br><br>
@@ -24,165 +23,246 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <P class="nav-link active txt1" aria-current="page" >KGL</P>
+            <P class="nav-link active txt1" aria-current="page">Karibu Groceries Limited Work Interface</P>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link txt1" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link txt1" href="#">Records</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link txt1" href="#">Inquires</a>
+            <a class="nav-link txt1" href="#">Inquires</a> -->
           </li>
-
         </ul>
         <form class="d-flex">
-          <button type="submit" class="btn btn-primary">
-            SIGN IN
-          </button>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" style="float: left;" type="submit">Search</button>
         </form>
       </div>
     </div>
-
   </nav>
+  <div class="row">
+    <div class="container-fluid d-none d-md-block col col-md-4" id="image-slider">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+            aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Img/beans1.jpg" class="d-block w-100 customheight" alt="...">
 
-  <div class="container-fluid d-none d-md-block" id="image-slider">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/peas3.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/gnuts6.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/gnuts2.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/soy1.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/maize1.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://picsum.photos/id/180/500/150" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <a href="week1.html" style=" text-decoration: none; color:rgb(255, 255, 255); ">
-              <h1>WEEK 1 </h1>
-            </a>
-            <h3>My First week Experience at Refractory..</h3>
+    </div>
+    <div class="container-fluid d-none d-md-block col col-md-4" id="image-slider">
+      <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 0"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+            aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Img/peas1.jpg" class="d-block w-100 customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/maize5.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/maize4.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/maize8.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/soy4.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/beans1.jpg" class="d-block w-100  customheight" alt="...">
+
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="https://picsum.photos/id/366/500/150" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <a href="week2.html" style=" text-decoration: none; color:rgb(253, 253, 253); ">
-              <h1>WEEK 2 </h1>
-            </a>
-            <h3>My Second week Experience at Refractory.</h3>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://picsum.photos/id/1073/500/150" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <a href="orientationweek..html" style=" text-decoration: none; color:rgb(255, 255, 255);">
-              <h1>Orientation WEEK</h1>
-            </a>
-            <h3>My Orientation Experience at Refractory.</h3>
-          </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions1"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    </div>
+    <div class="container-fluid d-none d-md-block col col-md-4" id="image-slider">
+      <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 0"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+            aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Img/maize3.jpg" class="d-block w-100 customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/beans4.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/soy1.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/beans1.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/soy2.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/beans3.jpg" class="d-block w-100  customheight" alt="...">
+
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
   </div>
 
+
+
   <div class="container" id="blog-container">
     <div class="row">
-      <div class="col col-md-8">
-
-        <div class="card">
-          <img src="https://picsum.photos/id/1/500/150" class="card-img-top" style="border-radius: 30px;"
-            alt="Me In Class week 2">
-          <div class="card-body">
-            <a href="week2.html" style=" text-decoration: none; color:rgb(3, 3, 3);">
-              <h5 class="card-title">WEEK 2 Experience</h5>
-            </a>
-
-            <p class="card-text">This follows my second week in the refractory catalyst program and my assesment of the
-              programme so far. </p>
-            <a href="week2.html" class="btn btn-secondary">Read More</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="https://picsum.photos/id/9/500/150" class="card-img-top" style="border-radius: 30px;"
-            alt="Me In Class on Day 2">
-          <div class="card-body">
-            <a href="week1.html" style=" text-decoration: none; color:rgb(0, 0, 0);">
-              <h5 class="card-title">WEEK 1 Experience</h5>
-            </a>
-
-            <p class="card-text">My first week in the refractory catalyst programme and my introduction into software
-              development . </p>
-            <a href="week1.html" class="btn btn-secondary">Read More</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="https://picsum.photos/id/782/500/150" class="card-img-top" style="border-radius: 30px;"
-            alt="Me In Class on Day on3">
-          <div class="card-body">
-            <a href="orientationweek..html" style=" text-decoration: none; color:rgb(5, 5, 5);">
-              <h5 class="card-title">Orientation week Experience</h5>
-            </a>
-            <p class="card-text">My orientation into the refractory catalyst programme for software development.</p>
-            <a href="orientationweek..html" class="btn btn-secondary">Read More</a>
-          </div>
+      <div class="col-md-5 mt-md-0 mt-3">
+        <P class=" txt2" aria-current="page">Karibu Groceries Limited</P>
+        <h3 class=" txt2">"FEEDING THE NATION."
+        </h3>
+        <div>
+          <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:250px; height:250px; 	
+          box-shadow: 5px 20px 50px #000;border-radius: 30px;" alt="Me In Class on Day on3">
         </div>
       </div>
-
-      <div class="d-none col-md-4 d-md-block" style="border:30px;">
-        <div class="card">
-          <div class="card-header">
-            Featured Posts
-          </div>
-          <ul class="list-group list-group-flush" style="border-radius: 30px;">
-            <li class="list-group-item"><a href="https://www.refactory.ug/"
-                style=" text-decoration: none; color:rgb(15, 106, 180);">What is refactory?</a></li>
-            <li class="list-group-item"><a href="https://github.com/jose987654"
-                style=" text-decoration: none; color:rgb(15, 106, 180);"> My Github</a></li>
-            <li class="list-group-item dropdown">
-              <div class="dropbtn" style=" text-decoration: none; color:rgb(15, 106, 180);">My
-                Progress</div>
-              <div class="dropdown-content">
-                <a href="week2.html">Week 2</a>
-                <a href="week1.html">Week 1</a>
-                <a href="orientationweek..html">Orientation week</a>
+      <div class="col col-md-7">
+        <div class="main">
+          <input type="checkbox" id="chk" aria-hidden="true">
+          <div class="signup">
+            <form>
+              <label for="chk" aria-hidden="true">Login</label>
+              <input type="email" name="email" placeholder="Email" required="">
+              <input type="password" name="pswd" placeholder="Password" required="">
+              <div class="form-group required">
               </div>
-            </li>
+              <button style="width: 60%;
+              height:50px;" class="custom">Login</button>
+            </form>
+          </div>
+          <div class=" login">
+            <form>
+              <label for="chk" aria-hidden="true">Sign up</label>
+              <input type="text" name="txt" placeholder="User name" required="">
+              <input type="email" name="email" placeholder="Email" required="">
+              <input type="password" name="pswd" placeholder="Password" required="">
+              <button class="custom" style="width: 60%;
+              height:50px;">Sign up</button>
+            </form>
+          </div>
 
-          </ul>
         </div>
       </div>
     </div>
   </div>
 
   <footer class="page-footer font-small blue pt-4">
-    <div class="container-fluid text-center text-md-left">
+    <div class="container-fluid text-center text-md-left ">
       <div class="row">
         <div class="col-md-4 mt-md-0 mt-3">
           <div>
-            <img src="./Img/logo5.jpg" class="card-img-top" style="width:auto; height:auto; border-radius: 30px;"
+            <img src="./Img/logo7.png" class="card-img-top" style="width:auto; height:auto; border-radius: 30px;"
               alt="Me In Class on Day on3">
           </div>
         </div>
         <div class="col-md-8 mt-md-0 mt-3 textcontent">
           <div class="row">
             <div class="col-md-4 mt-md-0 mt-3">
-              <h2 class="text-uppercase ">Karibu Groceries LTD</h2><br>
+              <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
               <p>We are whole Sale producers & Distributors of Cereals. Our Products include Beans, Cow peas,G nuts, Soy
                 beans</p>
             </div>
