--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <P class="nav-link active txt1" aria-current="page">Karibu Groceries Limited Work Interface</P>
+            <P class="nav-link active txt1" aria-current="page">Karibu Groceries Limited .</P>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link txt1" href="index.html">Home</a>
@@ -225,9 +225,9 @@
           <input type="checkbox" id="chk" aria-hidden="true">
           <div class="signup">
             <form>
-              <label for="chk" aria-hidden="true">Login</label>
-              <input type="email" name="email" placeholder="Email" required="">
-              <input type="password" name="pswd" placeholder="Password" required="">
+              <label for="chk" aria-hidden="true">  Login</label>
+              <input type="email" name="email" placeholder="Email" required="" id="email">
+              <input type="password" name="pswd" placeholder="Password" required="" id="password">
               <div class="form-group required">
               </div>
               <button style="width: 60%;
@@ -237,9 +237,9 @@
           <div class=" login">
             <form>
               <label for="chk" aria-hidden="true">Sign up</label>
-              <input type="text" name="txt" placeholder="User name" required="">
-              <input type="email" name="email" placeholder="Email" required="">
-              <input type="password" name="pswd" placeholder="Password" required="">
+              <input type="text" name="txt" placeholder="User name" required="" id="uname">
+              <input type="email" name="email" placeholder="Email" required="" id="email1">
+              <input type="password" name="pswd" placeholder="Password" required="" id="password1">
               <button class="custom" style="width: 60%;
               height:50px;">Sign up</button>
             </form>
