--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" style="float: left;" type="submit">Search</button>
         </form> -->
+        <form class="d-flex">
+          <button class="btn btn-outline-primary txt3" style=" float: left; height: 50px;" type="submit">
+            <a href="signup.html" style="text-decoration:none; color:azure">Signup</a></button>
+        </form>
       </div>
     </div>
   </nav>
