--- a/signup.html
+++ b/signup.html
@@ -25,20 +25,24 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <P class="nav-link active nav1" aria-current="page">Karibu Groceries Limited .</P>
-                    </li>
+                    </li>                    
                 </ul>
+                <form class="d-flex">
+                    <button class="btn btn-outline-primary txt2" style="float: left; height: 50px;" type="submit">
+                        <a href="index.html" style="text-decoration:none; color:azure">Login</a></button>
+                </form>
             </div>
         </div>
     </nav>
 
     <div class="container" id="blog-container">
         <div class="row">
-            <div class="col col-md-12">
+            <div class="col-md-12">
                 <div class="main custom1">
                     <h2 class="txt1"> Sign up Page</h2>
                     <div class="signup">
                         <div class="row ">
-                            <div class="col col-md-6">
+                            <div class=" col col-md-6">
                                 <form name="registration" onsubmit="">
                                     <ul>
                                         <li>
