--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   <div class="container" id="blog-container">
     <div class="row">
       <div class="col-md-5 mt-md-0 mt-3">
-        <P class=" txt2" aria-current="page">Karibu Groceries Limited</P>
+        <h1 class=" tx2" aria-current="page">Karibu Groceries Limited</h1>
         <h3 class=" txt2">"FEEDING THE NATION."
         </h3>
         <div>
