--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           </div>
           <div class="carousel-item">
-            <img src="./Img/gnuts6.jpg" class="d-block w-100  customheight" alt="...">
+            <img src="./Img/maize2.jpg" class="d-block w-100  customheight" alt="...">
 
           </div>
           <div class="carousel-item">
