--- a/procure.html
+++ b/procure.html
@@ -30,7 +30,8 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>KGL Groceries Limited.</h3>
+                <h3><img src="./Img/logo5.jpg" style="width:160px; height:160px; border-radius: 3px; background-color: #ddd;"></h3>
+                <!-- <h3 >Karibu Groceries Limited.</h3> -->
                 <strong>KGL</strong>
             </div>
 
@@ -125,7 +126,8 @@
                         <ul class="nav navbar-nav ml-auto">
 
                             <li class="nav-item active">
-                                <button class="btn btn-outline-primary"><a class="nav-link" href="#" style="color:#000000">LogOut</a></button>
+                                <button class="btn btn-outline-primary"><a class="nav-link" href="#"
+                                        style="color:#000000">LogOut</a></button>
                             </li>
 
                             <!-- <li class="nav-item">
@@ -168,48 +170,49 @@
 
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-            
+
         </div>
     </div>
     <footer class="page-footer font-small blue pt-4 ">
         <div class="container-fluid text-center text-md-left ">
-          <div class="row">
-            <div class="col-md-2 mt-md-0 mt-3">
-              <div>
-                <img src="./Img/logo5.jpg" class="card-img-top" style="width:150px; height:150px; border-radius: 30px;"
-                  alt="Me In Class on Day on3">
-              </div>
+            <div class="row">
+                <div class="col-md-2 mt-md-0 mt-3">
+                    <div>
+                        <img src="./Img/logo5.jpg" class="card-img-top"
+                            style="width:150px; height:150px; border-radius: 30px;" alt="Me In Class on Day on3">
+                    </div>
+                </div>
+                <div class="col-md-10 mt-md-0 mt-3 textcontent">
+                    <div class="row">
+                        <div class="col-md-4 mt-md-0 mt-3">
+                            <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
+                            <p style="color:rgb(255, 255, 255)">We are whole Sale producers & Distributors of Cereals.
+                                Our Products include Beans, Cow peas,G nuts, Soy
+                                beans</p>
+                        </div>
+                        <div class="col-md-3 mb-md-0 mb-4 border-left ">
+                            <h2 class="footer-heading">Discover</h2>
+                            <ul class="list-unstyled textcontent">
+                                <li><a href="#" class="py-1 d-block textcontent">Buy and Sell</a></li>
+                                <li><a href="#" class="py-1 d-block textcontent">Merchant</a></li>
+                                <li><a href="#" class="py-1 d-block textcontent">Help & Support</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3 mb-md-0 mb-4 border-left ">
+                            <h2 class="footer-heading">Resources</h2>
+                            <ul class="list-unstyled ">
+                                <li><a href="#" class="py-1 d-block textcontent">Security</a></li>
+                                <li><a href="#" class="py-1 d-block textcontent">Charts</a></li>
+                                <li><a href="#" class="py-1 d-block textcontent">Privacy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-10 mt-md-0 mt-3 textcontent">
-              <div class="row">
-                <div class="col-md-4 mt-md-0 mt-3">
-                  <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
-                  <p style="color:rgb(255, 255, 255)">We are whole Sale producers & Distributors of Cereals. Our Products include Beans, Cow peas,G nuts, Soy
-                    beans</p>
-                </div>
-                <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                  <h2 class="footer-heading">Discover</h2>
-                  <ul class="list-unstyled textcontent">
-                    <li><a href="#" class="py-1 d-block textcontent">Buy and Sell</a></li>
-                    <li><a href="#" class="py-1 d-block textcontent">Merchant</a></li>
-                    <li><a href="#" class="py-1 d-block textcontent">Help & Support</a></li>
-                  </ul>
-                </div>
-                <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                  <h2 class="footer-heading">Resources</h2>
-                  <ul class="list-unstyled ">
-                    <li><a href="#" class="py-1 d-block textcontent">Security</a></li>
-                    <li><a href="#" class="py-1 d-block textcontent">Charts</a></li>
-                    <li><a href="#" class="py-1 d-block textcontent">Privacy</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
         </div>
-      </footer>
+    </footer>
 
 
 
