--- a/Produce purchases.html
+++ b/Produce purchases.html
@@ -35,35 +35,47 @@
                 <strong>KGL</strong>
             </div>
 
-            <ul class="list-unstyled components">
-                <li class="active">
+            <ul class="list-unstyled components" style="font-size: 19px;">
+                <li>
                     <a href="#homeSubmenu" aria-expanded="false" class="dropdown-toggle">
-                        <!-- <i class="fas fa-home"></i> -->
+                        <i class="fas fa-home"></i>
                         Home
                     </a>
+                </li>
+
+                <li class="active">
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"
+                        style="color:#181553">
+                        <i class="fas fa-copy"></i>
+                        Purchases
+                    </a>
+                    <ul class="collapse list-unstyled " id="pageSubmenu">
+                        <li>
+                            <a href="#">Supplier</a>
+                        </li>
+                        <li>
+                            <a href="#">Farms</a>
+                        </li>
+                        
+                    </ul>
+                </li>
+                <!-- <li>
+                    <a href="#">
+                        <i class="fas fa-image"></i>
+                        Portfolio
+                    </a>
+                </li> -->
+                <li>
+                    <a href="#">
+                        <i class="fas fa-copy"></i>
+                        Sales
+                    </a>
+
                 </li>
                 <li>
                     <a href="#">
                         <i class="fas fa-briefcase"></i>
                         About
-                    </a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-copy"></i>
-                        Pages
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-image"></i>
-                        Portfolio
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-question"></i>
-                        FAQ
                     </a>
                 </li>
                 <li>
@@ -74,14 +86,14 @@
                 </li>
             </ul>
 
-            <ul class="list-unstyled CTAs">
+            <!-- <ul class="list-unstyled CTAs">
                 <li>
                     <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
                 </li>
                 <li>
                     <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
                 </li>
-            </ul>
+            </ul> -->
 
 
         </nav>
